# HMX-MaidBot

./: .gitignore  .gitmodules  README.md  docker-compose.yml.example
common/: proxy_types.py  pyproject.toml  reader.py  setup.py
common/proxy_types/: __init__.py
common/reader/: __init__.py
common/rollgames/: __init__.py  choose.py  dice.py  games.yaml
common/simple_parsers/: string_argument_parser.py
discord/: Dockerfile  app.py  basebot.py  db.py  debug_utils.py  load_db.py  load_maids.py  load_secrets.py  maid.py  requirements.txt  server_state.py  utils.py
discord/dcmaid/: __init__.py  basebot.py  basecmd.py  basecog.py  constants.py  exception.py  help_base.json  help_base.yaml  helper.py  maid.py  mixin.py  perm.py  reader.py  state.py  typing.py  utils.py  views.py  weight.py
discord/dcmaid/ext/: roll.py  template  var.py  vote.py
discord/dcmaid/ext/ext-roll/: __init__.py  choose.py  dice.py
discord/dcmaid/ext/ext_roll/: __init__.py  choose.py  dice.py
discord/dcmaid/locale/: _common.yaml  base.yaml  roll.yaml  var.yaml  vote.yaml
